@@ -2,6 +2,7 @@ package eu.neclab.ngsildbroker.queryhandler.services;
 
 import java.net.URLEncoder;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Iterator;
@@ -12,6 +13,7 @@ import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 
 import com.github.jsonldjava.core.JsonLdConsts;
+import eu.neclab.ngsildbroker.commons.datatypes.terms.DataSetIdTerm;
 import eu.neclab.ngsildbroker.commons.tools.QueryParser;
 import jakarta.annotation.PostConstruct;
 import jakarta.enterprise.context.ApplicationScoped;
@@ -109,14 +111,14 @@ public class QueryService {
 			TypeQueryTerm typeQuery, String idPattern, AttrsQueryTerm attrsQuery, QQueryTerm qQuery, CSFQueryTerm csf,
 			GeoQueryTerm geoQuery, ScopeQueryTerm scopeQuery, LanguageQueryTerm langQuery, int limit, int offSet,
 			boolean count, boolean localOnly, Context context, io.vertx.core.MultiMap headersFromReq,
-			boolean doNotCompact,Set<String> jsonKeys) {
+			boolean doNotCompact,Set<String> jsonKeys, DataSetIdTerm dataSetIdTerm) {
 		if (localOnly) {
 			return localQueryLevel1(tenant, id, typeQuery, idPattern, attrsQuery, qQuery, geoQuery, scopeQuery,
-					langQuery, limit, offSet, count);
+					langQuery, limit, offSet, count,dataSetIdTerm);
 		}
 		if (!tokenProvided) {
 			return getAndStoreEntityIdList(tenant, id, idPattern, qToken, typeQuery, attrsQuery, geoQuery, qQuery,
-					scopeQuery, langQuery, limit, offSet, context, headersFromReq, doNotCompact).onItem()
+					scopeQuery, langQuery, limit, offSet, context, headersFromReq, doNotCompact,dataSetIdTerm).onItem()
 					.transformToUni(t -> {
 						Map<String, Map<String, Object>> localResults = t.getItem1();
 						EntityMap entityMap = t.getItem2();
@@ -147,13 +149,9 @@ public class QueryService {
 		for (EntityMapEntry entry : resultEntityMap) {
 			List<QueryRemoteHost> remoteHosts = entry.getRemoteHosts();
 			for (QueryRemoteHost remoteHost : remoteHosts) {
-				List<String> tmp = remoteHost2EntityIds.get(remoteHost);
-				if (tmp == null) {
-					tmp = Lists.newArrayList();
-					remoteHost2EntityIds.put(remoteHost, tmp);
-				}
-				logger.debug("adding entityid: " + entry.getEntityId() + " for remote host " + remoteHost.host());
-				tmp.add(URLEncoder.encode(entry.getEntityId(), Charset.forName("utf-8")));
+                List<String> tmp = remoteHost2EntityIds.computeIfAbsent(remoteHost, k -> Lists.newArrayList());
+                logger.debug("adding entityid: " + entry.getEntityId() + " for remote host " + remoteHost.host());
+				tmp.add(URLEncoder.encode(entry.getEntityId(), StandardCharsets.UTF_8));
 			}
 
 			entityId2AttrName2DatasetId2AttrValue.put(entry.getEntityId(), new HashMap<>(0));
@@ -267,14 +265,18 @@ public class QueryService {
 						entity.put(NGSIConstants.NGSI_LD_SCOPE, scopes);
 					}
 				}
-				entity.put(NGSIConstants.NGSI_LD_CREATED_AT,
-						List.of(Map.of(NGSIConstants.JSON_LD_TYPE, NGSIConstants.NGSI_LD_DATE_TIME,
-								NGSIConstants.JSON_LD_VALUE,
-								SerializationTools.toDateTimeString(entityId2OldestCreatedAt.get(entityId)))));
-				entity.put(NGSIConstants.NGSI_LD_MODIFIED_AT,
-						List.of(Map.of(NGSIConstants.JSON_LD_TYPE, NGSIConstants.NGSI_LD_DATE_TIME,
-								NGSIConstants.JSON_LD_VALUE,
-								SerializationTools.toDateTimeString(entityId2YoungestModified.get(entityId)))));
+				if(entityId2OldestCreatedAt.get(entityId)!=null) {
+					entity.put(NGSIConstants.NGSI_LD_CREATED_AT,
+							List.of(Map.of(NGSIConstants.JSON_LD_TYPE, NGSIConstants.NGSI_LD_DATE_TIME,
+									NGSIConstants.JSON_LD_VALUE,
+									SerializationTools.toDateTimeString(entityId2OldestCreatedAt.get(entityId)))));
+				}
+				if(entityId2YoungestModified.get(entityId)!=null) {
+					entity.put(NGSIConstants.NGSI_LD_MODIFIED_AT,
+							List.of(Map.of(NGSIConstants.JSON_LD_TYPE, NGSIConstants.NGSI_LD_DATE_TIME,
+									NGSIConstants.JSON_LD_VALUE,
+									SerializationTools.toDateTimeString(entityId2YoungestModified.get(entityId)))));
+				}
 				for (Entry<String, Map<String, Map<String, Object>>> attribEntry : attribMap.entrySet()) {
 					entity.put(attribEntry.getKey(), Lists.newArrayList(attribEntry.getValue().values()));
 				}
@@ -567,9 +569,9 @@ public class QueryService {
 
 	private Uni<QueryResult> localQueryLevel1(String tenant, String[] id, TypeQueryTerm typeQuery, String idPattern,
 			AttrsQueryTerm attrsQuery, QQueryTerm qQuery, GeoQueryTerm geoQuery, ScopeQueryTerm scopeQuery,
-			LanguageQueryTerm langQuery, int limit, int offSet, boolean count) {
+			LanguageQueryTerm langQuery, int limit, int offSet, boolean count, DataSetIdTerm dataSetIdTerm) {
 		return queryDAO.queryLocalOnly(tenant, id, typeQuery, idPattern, attrsQuery, qQuery, geoQuery, scopeQuery,
-				langQuery, limit, offSet, count).onItem().transform(rows -> {
+				langQuery, limit, offSet, count, dataSetIdTerm).onItem().transform(rows -> {
 					QueryResult result = new QueryResult();
 					if (limit == 0 && count) {
 						result.setCount(rows.iterator().next().getLong(0));
@@ -1360,9 +1362,9 @@ public class QueryService {
 			String idPattern, AttrsQueryTerm attrsQuery, QQueryTerm qQueryTerm, GeoQueryTerm geoQueryTerm,
 			ScopeQueryTerm scopeQueryTerm, LanguageQueryTerm queryTerm, Context context,
 			io.vertx.core.MultiMap headersFromReq, boolean idsOnly, String join, String containedBy, int joinLevel,
-			boolean doNotCompact) {
+			boolean doNotCompact,DataSetIdTerm dataSetIdTerm) {
 		return getAndStoreEntityIdList(tenant, ids, idPattern, idPattern, typeQueryTerm, attrsQuery, geoQueryTerm,
-				qQueryTerm, scopeQueryTerm, queryTerm, 0, 0, context, headersFromReq, doNotCompact).onItem()
+				qQueryTerm, scopeQueryTerm, queryTerm, 0, 0, context, headersFromReq, doNotCompact,dataSetIdTerm).onItem()
 				.transform(t -> {
 					// List<Map<String, Object>> localResults = t.getItem1();
 
@@ -1379,9 +1381,9 @@ public class QueryService {
 	private Uni<Tuple2<Map<String, Map<String, Object>>, EntityMap>> getAndStoreEntityIdList(String tenant, String[] id,
 			String idPattern, String qToken, TypeQueryTerm typeQuery, AttrsQueryTerm attrsQuery, GeoQueryTerm geoQuery,
 			QQueryTerm qQuery, ScopeQueryTerm scopeQuery, LanguageQueryTerm langQuery, int limit, int offset,
-			Context context, io.vertx.core.MultiMap headersFromReq, boolean doNotCompact) {
+			Context context, io.vertx.core.MultiMap headersFromReq, boolean doNotCompact, DataSetIdTerm dataSetIdTerm) {
 		Uni<Tuple2<Map<String, Map<String, Object>>, List<String>>> localIds = queryDAO.queryForEntityIds(tenant, id,
-				typeQuery, idPattern, attrsQuery, qQuery, geoQuery, scopeQuery, context, limit, offset);
+				typeQuery, idPattern, attrsQuery, qQuery, geoQuery, scopeQuery, context, limit, offset, dataSetIdTerm);
 		List<QueryRemoteHost> remoteHost2Query = getRemoteQueries(tenant, id, typeQuery, idPattern, attrsQuery, qQuery,
 				geoQuery, scopeQuery, langQuery, context);
 		Uni<Map<QueryRemoteHost, List<String>>> remoteIds;
